--- a/H3PM/H3PM.vcxproj
+++ b/H3PM/H3PM.vcxproj
@@ -141,6 +141,11 @@
   <ItemGroup>
     <ClCompile Include="H3PM.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="JSON\ModFile.h" />
+    <ClInclude Include="JSON\ModListFormat.h" />
+    <ClInclude Include="JSON\SingularMods.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
