Added libcurl.lib to the linker input (Might require fiddling for other IDEs) Added JSON header and handler struct

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(H3PM)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(H3PM
-        H3PM/H3PM.cpp H3PM/JSON/ModFile.h H3PM/JSON/SingularMods.h H3PM/JSON/ModListFormat.h)
+        H3PM/H3PM.cpp H3PM/JSON/ModFile.h H3PM/JSON/SingularMods.h H3PM/JSON/ModListFormat.h H3PM/JSON/json.hpp)
