--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,12 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/cmake-build-debug/CMakeFiles/H3PM.dir/CXX.includecache
+/cmake-build-debug/CMakeFiles/H3PM.dir/depend.internal
+/cmake-build-debug/CMakeFiles/H3PM.dir/embed.manifest
+/cmake-build-debug/H3PM.exe
+/cmake-build-debug/CMakeFiles/H3PM.dir/intermediate.manifest
+/cmake-build-debug/libcurl-d.dll
+/cmake-build-debug/CMakeFiles/H3PM.dir/manifest.rc
+/cmake-build-debug/CMakeFiles/H3PM.dir/manifest.res
+/cmake-build-debug/zlibd1.dll
