--- a/.gitignore
+++ b/.gitignore
@@ -370,3 +370,10 @@ FodyWeavers.xsd
 /cmake-build-debug/CMakeFiles/H3PM.dir/manifest.rc
 /cmake-build-debug/CMakeFiles/H3PM.dir/manifest.res
 /cmake-build-debug/zlibd1.dll
+/cmake-build-debug/CMakeFiles/H3PM.dir/link.txt
+/cmake-build-debug/CMakeFiles/H3PM.dir/H3PM/Net/GetDatabase.cpp.o
+/cmake-build-debug/H3PM
+/cmake-build-debug/CMakeFiles/H3PM.dir/H3PM/H3PM.cpp.o
+/cmake-build-debug/CMakeFiles/H3PM.dir/H3PM/Common/CommandProcessing.cpp.o
+/cmake-build-debug/CMakeFiles/3.17.5/CompilerIdCXX/a.out
+/cmake-build-debug/CMakeFiles/3.17.5/CompilerIdC/a.out
