--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ add_executable(H3PM
         H3PM/Net/GetDatabase.cpp
         H3PM/Net/GetDatabase.h
         H3PM/JSON/Handler.h
-        H3PM/Common/Commands/command.h H3PM/Common/Commands/CommandProcessing.cpp H3PM/Common/Commands/CommandProcessing.h)
+        H3PM/Common/Commands/Command.h H3PM/Common/Commands/Command.cpp)
 
 FIND_PACKAGE(CURL CONFIG REQUIRED)
 TARGET_LINK_LIBRARIES(H3PM PRIVATE CURL::libcurl)
