Removed the solution (H3PM.sln) and also libcurl.lib, because we are using CMAKE and VCPKG

--- a/.gitignore
+++ b/.gitignore
@@ -361,6 +361,8 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# Cmake stuff
 /cmake-build-debug/CMakeFiles/H3PM.dir/CXX.includecache
 /cmake-build-debug/CMakeFiles/H3PM.dir/depend.internal
 /cmake-build-debug/CMakeFiles/H3PM.dir/embed.manifest
