--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,14 @@ project(H3PM)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(H3PM
+add_executable(
+        H3PM
         H3PM/H3PM.cpp
-        H3PM/JSON/rapidjson/
         H3PM/Net/GetDatabase.cpp
         H3PM/Net/GetDatabase.h
-        H3PM/JSON/Handler.h
-        H3PM/Common/Commands/Command.h H3PM/Common/Commands/Command.cpp)
+        H3PM/Common/Commands/Command.h
+        H3PM/Common/Commands/Command.cpp
+)
 
 FIND_PACKAGE(CURL CONFIG REQUIRED)
 TARGET_LINK_LIBRARIES(H3PM PRIVATE CURL::libcurl)
